part-2-services-routes-egress/examples/route-example.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vm-l2-a-route
  namespace: udn-test1
spec:
  to:
    kind: Service
    name: vm-l2-a-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
